--- a/html.html
+++ b/html.html
@@ -6,14 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- Block Level Elements -->
+    <!--Basic HTML Tags--> 
+    <!-- Heading Tags-->
      <h1>Heading H1</h1>
      <h2>Heading H2</h2>
      <h3>Heading H3</h3>
      <h4>Heading H4</h4>
      <h5>Heading H5</h5>
      <h6>Heading H6</h6>
-     <!-- Inline Elements -->
-      <span>Thi is  Span Inline Element</span>
+     <!-- Paragraph Tag-->
+      <p> This is a Paragraph 
+            line 2
+            line 3 Line Break <br> After Line break 
+      </p>
+      
 </body>
 </html>
