--- a/html.html
+++ b/html.html
@@ -15,10 +15,10 @@
      <h5>Heading H5</h5>
      <h6>Heading H6</h6>
      <!-- Paragraph Tag-->
-      <p> This is a Paragraph 
-            line 2
-            line 3 Line Break <br> After Line break 
+      <p> This is a Paragraph <br>
+            line 2 <br>
+            line 3 <br> Line Break <br> After Line break 
       </p>
-      
+
 </body>
 </html>
