--- a/html.html
+++ b/html.html
@@ -18,6 +18,11 @@
       <p> This is a Paragraph <br>
             line 2 <br>
             line 3 <br> Line Break <br> After Line break 
+            <center> ++++++++ Center Tag ++++++++ </center>
+            <hr> 
+            non breaking space example &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <-Space
+            
+            <pre> </pre>
       </p>
 
 </body>
