--- a/html.html
+++ b/html.html
@@ -20,8 +20,25 @@
             line 3 <br> Line Break <br> After Line break 
             <center> ++++++++ Center Tag ++++++++ </center>
             <hr> 
-            non breaking space example &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <-Space
-            
+            non breaking space example &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <-Space <br>
+                Unordered list
+            <ul>
+                <li>l1</li>
+                <li>l2</li>
+                <li>l3</li>
+                <li>l3</li>
+                <li>l4</li>
+                <li>l5</li>
+            </ul>
+            Ordered list 
+            <ol>
+                <li>l1</li>
+                <li>l2</li>
+                <li>l3</li>
+                <li>l4</li>
+                <li>l5</li>
+                <li>l6</li>
+            </ol>
             <pre> </pre>
       </p>
 
