--- a/html.html
+++ b/html.html
@@ -15,13 +15,15 @@
      <h5>Heading H5</h5>
      <h6>Heading H6</h6>
      <!-- Paragraph Tag-->
-      <p> This is a Paragraph <br>
+      <p> <h4>This is a Paragraph</h4> <br>
             line 2 <br>
-            line 3 <br> Line Break <br> After Line break 
-            <center> ++++++++ Center Tag ++++++++ </center>
+            line 3 <br> Line Break <br> After Line break </p>
+            <p>
+            <center> <h2>++++++++ Center Tag ++++++++ </h2></center>
             <hr> 
             non breaking space example &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <-Space <br>
-                Unordered list
+            </p>
+            <p> <h4>Unordered list</h4>
             <ul>
                 <li>l1</li>
                 <li>l2</li>
@@ -30,7 +32,7 @@
                 <li>l4</li>
                 <li>l5</li>
             </ul>
-            Ordered list 
+            <h4>Ordered list</h4>
             <ol>
                 <li>l1</li>
                 <li>l2</li>
@@ -39,7 +41,6 @@
                 <li>l5</li>
                 <li>l6</li>
             </ol>
-            <pre> </pre>
       </p>
 
 </body>
