--- a/Formatting_tags.html
+++ b/Formatting_tags.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>
-        <strong>Lorem</strong> <em>ipsum dolor </em> <u> consectetur adipisicing elit</u>. <ins>(Inserted text)</ins><del> Minima</del> ad officiis, <mark> quibusdam quod,</mark> accusamus debitis nihil excepturi, ratione ipsa in dolor aperiam? Nobis omnis consequuntur accusamus, nemo officiis tempora aliquid.
+        <strong>Lorem</strong> <em>ipsum dolor </em> <u> consectetur adipisicing elit</u>. <ins>(Inserted text)</ins><del> Minima</del> ad officiis, <mark> quibusdam quod,</mark> accusamus <mark>debitis nihil excepturi,</mark> ratione ipsa in dolor aperiam? Nobis omnis consequuntur accusamus, nemo officiis tempora aliquid.
     </p>
 </body>
 </html>
