Ordered List Types

--- a/Day-3/semantic.html
+++ b/Day-3/semantic.html
@@ -11,7 +11,46 @@
 
         <img src="https://cdn.pixabay.com/photo/2024/01/02/14/58/leaf-8483401_640.jpg" alt="Another leaf image" title="Image 2"/>
 
-        
+        <ol type="i">
+            <li>ONE</li>
+            <li>TWO</li>
+            <li>THREE</li>
+            <li>FOUR</li>
+            <li>FIVE</li>
+            <li>SIX</li>
+        </ol>
+        <ol type="I">
+            <li>ONE</li>
+            <li>TWO</li>
+            <li>THREE</li>
+            <li>FOUR</li>
+            <li>FIVE</li>
+            <li>SIX</li>
+        </ol>
+        <ol type="1">
+            <li>ONE</li>
+            <li>TWO</li>
+            <li>THREE</li>
+            <li>FOUR</li>
+            <li>FIVE</li>
+            <li>SIX</li>
+        </ol>
+        <ol type="A">
+            <li>ONE</li>
+            <li>TWO</li>
+            <li>THREE</li>
+            <li>FOUR</li>
+            <li>FIVE</li>
+            <li>SIX</li>
+        </ol>
+        <ol type="a">
+            <li>ONE</li>
+            <li>TWO</li>
+            <li>THREE</li>
+            <li>FOUR</li>
+            <li>FIVE</li>
+            <li>SIX</li>
+        </ol>
         
     </p>
 </body>
