--- a/Day-3/semantic.html
+++ b/Day-3/semantic.html
@@ -51,6 +51,30 @@
             <li>FIVE</li>
             <li>SIX</li>
         </ol>
+        <ul type="circle">
+            <li>ONE</li>
+            <li>TWO</li>
+            <li>THREE</li>
+            <li>FOUR</li>
+            <li>FIVE</li>
+            <li>SIX</li>
+        </ul>
+        <ul type="disc">
+            <li>ONE</li>
+            <li>TWO</li>
+            <li>THREE</li>
+            <li>FOUR</li>
+            <li>FIVE</li>
+            <li>SIX</li>
+        </ul>
+        <ul type="square">
+            <li>ONE</li>
+            <li>TWO</li>
+            <li>THREE</li>
+            <li>FOUR</li>
+            <li>FIVE</li>
+            <li>SIX</li>
+        </ul>
         
     </p>
 </body>
