Basic table in html

--- a/Day-3/semantic.html
+++ b/Day-3/semantic.html
@@ -75,7 +75,8 @@
             <li>FIVE</li>
             <li>SIX</li>
         </ul>
-        
+        <!-- Commenting -->
+          
     </p>
 </body>
 </html>
