--- a/Day-4/table.html
+++ b/Day-4/table.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <table border="1">
+    <table border="1" cellpadding="5" cellspacing="20" >
         <tr>
             <td>Student</td>
             <td>Class</td>
