--- a/Day-5/Forms.html
+++ b/Day-5/Forms.html
@@ -6,10 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-   <form>
+    <h1>Login Form</h1>
+   <form >
     <label for="Email">User Name/Email:</label>
-    <input id="Email" placeholder="Type User Name/Email"/>
-
+    <input id="Email" placeholder="Type User Name/Email" type="email"/>
+    <br>
+        <label for="password">Password : </label>
+        <input id="password" placeholder="Enter Password "/>
+        <br>    
+        <button>Login</button>
    </form> 
 </body>
 </html>
