--- a/Day-5/login.html
+++ b/Day-5/login.html
@@ -8,12 +8,19 @@
 <body>
     <h1> Login Page</h1>
     <form>
-        <label for="user name">Username : </label>
-        <input id="user name" placeholder="Enter User Name "/>
-        <br>
+        <label for="Email">Email:</label>
+        <input id="Email" placeholder="Enter Email" type="email"/>
+        <br><br>
         <label for="password">Password : </label>
         <input id="password" placeholder="Enter Password "/>
+        <br><br>
+        <label>
+            <input type="checkbox" name="remember"> Remember me</input>
+        </label><br>
+        <br>    
+        <button type="submit">Login</button>
     </form>
+    <br>
     <a href="signup.html">Signup Here</a>
 </body>
 </html>
