--- a/Website/website.html
+++ b/Website/website.html
@@ -7,13 +7,15 @@
 </head>
 <body>
    <nav >
-        <img src="images.jpg" width="150" height="150"/><br><br>
+        <img src="porsche.jpg" width="150" height="150"/><br><br>
+    <p>
     <div>
         <a href="home.html"> Home </a>
         <a href="about.html"> About </a>
         <a href="help.html"> Help </a>
         <a href="login.html"> Login/SignUp </a>
     </div>
+</p>
    </nav> 
 </body>
 </html>
