Login Page Created

--- a/Day-8/googlefont.html
+++ b/Day-8/googlefont.html
@@ -29,7 +29,7 @@
               font-weight: <weight>;
               font-style: normal;
               font-variation-settings:
-                "wdth" 50;
+                "wdth" 5 0;
             }
             .XYZ{
                 background-color: grey;
