--- a/Website/website.html
+++ b/Website/website.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .top{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
 </head>
 <body>
-   <nav >
-        <img src="porsche.jpg" width="150" height="150"/><br><br>
-    <p>
+   <nav class="top"  >
+        <img src="porsche.jpg" width="250" height="250"/>
     <div>
-        <a href="home.html"> Home </a>
-        <a href="about.html"> About </a>
-        <a href="help.html"> Help </a>
+        <a href="home.html"> Home </a>&nbsp;
+        <a href="about.html"> About </a>&nbsp;
+        <a href="help.html"> Help </a>&nbsp;
         <a href="login.html"> Login/SignUp </a>
     </div>
-</p>
    </nav> 
 </body>
 </html>
