Object Properties and Methods

--- a/JAva Script 2/practice2.html
+++ b/JAva Script 2/practice2.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <script src="practice2.js"></script>
-    <h1>Arrays and functions in JS</h1>
+    <h1>Loops and Algorithms</h1>
+    <h1>Object Properties and Methods</h1>
+    <p>open inspect and then console to view outputs</p>
 </body>
 </html>
