Acess Github User Data and Show on web Page

--- a/Java Script/Java Script 3/index3.html
+++ b/Java Script/Java Script 3/index3.html
@@ -16,7 +16,7 @@
                 }
                 else
                 {
-                    reject("value is not greater than 0.5");
+                    reject("value is not greater than: ");
                 }
                 });
 
